# zfs-ubuntu

./: .editorconfig  .gitignore  CLAUDE.md  PROXMOX_INSTALLER_COMPARISON.md  STYLE_GUIDE.md  installer.sh  kubuntu-3disk-raidz1-zfs-install.md  kubuntu-calamares-installer-analysis.md  kubuntu-zfs-issues.md  kubuntu_zfs.sh  kubuntu_zfs_commands.txt  proxmox_style_zfs_installer.sh  proxmox_style_zfs_installer.sh.bak  pyproject.toml  ubuntu-zfs-installer-analysis.md  ubuntu_22_04_root_on_zfs.md
proxmox-zfs-analysis/: README.md  proxmox-chroot  proxmox-fetch-answer  proxmox-post-hook  proxmox-tui-installer  zfs-procedures-summary.md
src/zfs_ubuntu/: __about__.py
tests/: __init__.py
