[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zfs-ubuntu"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "tkirkland", email = "tkirkland@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/tkirkland/zfs-ubuntu#readme"
Issues = "https://github.com/tkirkland/zfs-ubuntu/issues"
Source = "https://github.com/tkirkland/zfs-ubuntu"

[tool.hatch.version]
path = "src/zfs_ubuntu/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/zfs_ubuntu tests}"

[tool.coverage.run]
source_pkgs = ["zfs_ubuntu", "tests"]
branch = true
parallel = true
omit = [
  "src/zfs_ubuntu/__about__.py",
]

[tool.coverage.paths]
zfs_ubuntu = ["src/zfs_ubuntu", "*/zfs-ubuntu/src/zfs_ubuntu"]
tests = ["tests", "*/zfs-ubuntu/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
